# kaggle-GDAP

./: .env_sample  .gitignore  Readme.md  main.py  pyproject.toml  run.ipynb  run.py  summary.md
notebooks/: baseline.ipynb
src/: augment.py  config.py  data.py  features.py  models.py  optimize.py  stats.py  train.py  utils.py
