[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdap_kg"
version = "0.0.1"
description = "Add your description here"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "tifffile>=2024.9.20",
    "scipy>=1.14.0",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.8.0",
    "pyyaml>=6.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
